add game variables

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <p>INSTRUCTION: Pick between Rock,Paper,Or Scissors in the text box. The winner will be chosen depending on the outcome.</p>
       <img src="https://cdn.dribbble.com/users/27981/screenshots/2193123/rock_paper_scissors__2x.png"height="500" width="500">
       <input id="input1" type="text">
+      <button>Shoot!</button>
 
 
 
