--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- TASK 1: In the div below. 
         1. In a header tag, add a title.
         2. In a paragraph tag, add instructions on how to play the game.
-        3. Add a RPS image.
+         3. Add a RPS image.
         4. Add input box and button .
         5. Add divs to record User Choice and Comput"er Choice.
         6. Add a div to record the Winner.
@@ -28,7 +28,8 @@
     <p>INSTRUCTION: Pick between Rock,Paper,Or Scissors in the text box. The winner will be chosen depending on the outcome.</p>
       <img src="https://cdn.dribbble.com/users/27981/screenshots/2193123/rock_paper_scissors__2x.png"height="500" width="500">
       <input id="input1" type="text">
-      <button>Shoot!</button>
+       <button id="button"> Shoot! </button>
+  <div id="user-choice"></div>
 
 
 
